# rabbit_auto

./: Cargo.toml  LICENSE  README.md
src/: auto_ack.rs  comms.rs  config.rs  consumer.rs  exchanges.rs  lib.rs  publish_properties.rs  publisher.rs  stream_builder.rs
src/comms/: channels_ring.rs  comms_data.rs
src/publisher/: publisher_properties.rs  serialise.rs
src/stream_builder/: queue_options.rs
