[package]
name = "rabbit-auto"
version = "0.4.0"
authors = ["Anicka Burova <anicka.burova@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Wrappers for lapin publishers and consumers"
repository = "https://github.com/AnickaBurova/rabbit_auto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tokio_runtime"]
tokio_runtime = ["tokio"]
async_std_runtime = ["async-std"]

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
lapin = "2.1.1"
lazy_static = "1.4.0"
log = "0.4.17"
nom = "7.1.3"
tokio = { version = "1.28.0", optional = true, features = ["rt", "time", "sync", "macros"] }
async-std = { version = "1.12.0", optional = true }
executor-trait = "2.1.0"
reactor-trait = "1.1.0"
pinky-swear = "6.1.0"
async-trait = "0.1.68"
