[package]
name = "rabbit-auto"
version = "0.4.1"
authors = ["Anicka Burova <anicka.burova@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Wrappers for lapin publishers and consumers"
repository = "https://github.com/AnickaBurova/rabbit_auto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tokio_runtime"]
tokio_runtime = ["tokio"]
async_std_runtime = ["async-std"]
humantime = ["humantime_library"]
chrono = ["chrono_library"]

[dependencies]
anyhow = "1.0.81"
futures = "0.3.30"
lapin = "2.3.1"
lazy_static = "1.4.0"
log = "0.4.21"
nom = "7.1.3"
tokio = { version = "1.36.0", optional = true, features = ["rt", "time", "sync", "macros"] }
async-std = { version = "1.12.0", optional = true }
executor-trait = "2.1.0"
reactor-trait = "1.1.0"
pinky-swear = "6.2.0"
async-trait = "0.1.77"
humantime_library = { package = "humantime", version = "2.1.0", optional = true }
chrono_library = { package = "chrono", version = "0.4.35", optional = true }
